<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/reset_new_password"
        android:textColor="@color/black_textcolor_303133"
        android:textSize="@dimen/textsize_13" />

    <EditText
        android:id="@+id/resetpwd_new_PassWord"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_45"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/find_password_lin1_bg"
        android:gravity="center_vertical"
        android:hint="@string/please_enter_your_password"
        android:paddingLeft="@dimen/padding_left_15"
        android:phoneNumber="true"
        android:singleLine="true"
        android:textColor="@color/black_textcolor_606266"
        android:textColorHint="@color/gray_textcolor_D2D2D2"
        android:textSize="@dimen/textsize_12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset_comfirm_the_new_password"
        android:textColor="@color/black_textcolor_303133"
        android:textSize="@dimen/textsize_13" />

    <EditText
        android:id="@+id/resetpwd_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_45"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/find_password_lin1_bg"
        android:gravity="center_vertical"
        android:hint="@string/please_make_sure_the_password"
        android:paddingLeft="@dimen/padding_left_15"
        android:phoneNumber="true"
        android:singleLine="true"
        android:textColor="@color/black_textcolor_606266"
        android:textColorHint="@color/gray_textcolor_D2D2D2"
        android:textSize="@dimen/textsize_12" />

    <Button
        android:id="@+id/resetpwd_confirm"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_btn_radius"
        android:text="@string/resetpwd_confirm"
        android:textColor="@color/gray_background_F7F7F7"
        android:textSize="@dimen/textsize_17"
        android:textStyle="normal" />

</LinearLayout>