<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    android:orientation="vertical">

    <include
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_15"
            android:layout_marginLeft="@dimen/margin_left_30"
            android:layout_marginRight="@dimen/margin_right_55"
            android:layout_marginTop="@dimen/margin_top_20"
            android:text="@string/old_psw"
            android:textColor="@color/black_textcolor_303133"
            android:textSize="@dimen/textsize_14" />


        <EditText
            android:id="@+id/old_password"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/margin_left_30"
            android:layout_marginRight="@dimen/margin_right_55"
            android:layout_height="45dp"
            android:background="@drawable/gray_gray_coner_bg_5"
            android:gravity="center_vertical"
            android:hint="@string/please_enter_your_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textColor="@color/black_textcolor_606266"
            android:textColorHint="@color/gray_textcolor_D2D2D2"
            android:textSize="@dimen/textsize_12" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_15"
            android:layout_marginLeft="@dimen/margin_left_30"
            android:layout_marginRight="@dimen/margin_right_55"
            android:layout_marginTop="@dimen/margin_top_25"
            android:text="@string/new_psw"
            android:textColor="@color/black_textcolor_303133"
            android:textSize="@dimen/textsize_14" />


        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/margin_left_30"
            android:layout_marginRight="@dimen/margin_right_55"
            android:background="@drawable/gray_gray_coner_bg_5"
            android:gravity="center_vertical"
            android:hint="@string/please_enter_your_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textColor="@color/black_textcolor_606266"
            android:textColorHint="@color/gray_textcolor_D2D2D2"
            android:textSize="@dimen/textsize_12" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_15"
            android:layout_marginLeft="@dimen/margin_left_30"
            android:layout_marginRight="@dimen/margin_right_55"
            android:layout_marginTop="@dimen/margin_top_25"
            android:text="@string/new_psw2"
            android:textColor="@color/black_textcolor_303133"
            android:textSize="@dimen/textsize_14" />


        <EditText
            android:id="@+id/edit_change_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/margin_left_30"
            android:layout_marginRight="@dimen/margin_right_55"
            android:background="@drawable/gray_gray_coner_bg_5"
            android:gravity="center_vertical"
            android:hint="@string/please_make_sure_the_password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textColor="@color/black_textcolor_606266"
            android:textColorHint="@color/gray_textcolor_D2D2D2"
            android:textSize="@dimen/textsize_12" />


    </LinearLayout>

    <TextView
        android:id="@+id/change_password_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="@dimen/margin_left_35"
        android:layout_marginRight="@dimen/margin_right_42"
        android:layout_marginTop="100dp"
        android:layout_gravity="bottom"
        android:background="@drawable/new_button_next_shape"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@color/white_textcolor"
        android:textSize="@dimen/textsize_17"
        android:textStyle="normal" />

</LinearLayout>