<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_background"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar"
        layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/gray_rectangular_shape"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@mipmap/smartphone" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray_background_F7F7F7" />

        <EditText
            android:id="@+id/phone_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_enter_your_phone_number"
            android:paddingLeft="0dp"
            android:paddingRight="20dp"
            android:phoneNumber="true"
            android:singleLine="true"
            android:textColor="@color/black_textcolor_606266"
            android:textSize="@dimen/textsize_12" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/gray_rectangular_shape"
        android:orientation="horizontal">



        <ImageView
            android:id="@+id/code_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@mipmap/barcode" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/code_icon"
            android:background="@color/gray_background_F7F7F7" />

        <TextView
            android:id="@+id/get_code_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/get_code"
            android:textSize="@dimen/textsize_12"
            android:textColor="@color/blue_textcolor_39bcca" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/get_code_text"
            android:background="@color/gray_background_F7F7F7"
            android:textColorHint="@color/gray_textcolor_D2D2D2" />

        <EditText
            android:id="@+id/code_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="0dp"
            android:layout_toLeftOf="@+id/view2"
            android:layout_toRightOf="@+id/view"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/please_enter_the_verification_code"
            android:phoneNumber="true"
            android:singleLine="true"
            android:textColor="@color/black_textcolor_606266"
            android:textColorHint="@color/gray_textcolor_D2D2D2"
            android:textSize="@dimen/textsize_12" />
    </RelativeLayout>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/login_btn_radius"
        android:text="@string/next"
        android:textColor="@color/white_textcolor"
        android:textSize="@dimen/textsize_17"
        android:textStyle="normal" />

</LinearLayout>